// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ES|QL matcher query builder buildMatchGroupsQuery emits a valid query for UPN cross-field 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM \\".entities.v2.latest.default\\"
| WHERE entity.EngineMetadata.Type == \\"user\\"
    AND MV_COUNT(CASE(entity.namespace == \\"microsoft_365\\", user.id, entity.namespace == \\"entra_id\\", user.name)) == 1
    AND entity.namespace IN (\\"microsoft_365\\", \\"entra_id\\")
| EVAL match_value = TO_LOWER(CASE(entity.namespace == \\"microsoft_365\\", user.id, entity.namespace == \\"entra_id\\", user.name))
| WHERE match_value IS NOT NULL
    AND match_value != \\"\\"
    AND match_value RLIKE \\"[^@]+@[^@]+\\"
| EVAL is_unresolved = CASE(entity.relationships.resolution.resolved_to IS NULL, 1, 0)
| EVAL is_new = CASE(1 == 1, 1, 0)
| EVAL unresolved_id = CASE(is_unresolved == 1, entity.id, null)
| EVAL unresolved_namespace = CASE(is_unresolved == 1, entity.namespace, null)
| STATS ids = TOP(unresolved_id, 100, \\"asc\\"),
        unresolved_ns = VALUES(unresolved_namespace),
        existing_targets = TOP(entity.relationships.resolution.resolved_to, 100, \\"asc\\"),
        unresolved_n = SUM(is_unresolved),
        total_n = COUNT(*),
        new_n = SUM(is_new)
    BY match_value
| WHERE total_n >= 2 AND new_n >= 1
| SORT match_value ASC
| LIMIT 5000"
`;

exports[`ES|QL matcher query builder buildMatchGroupsQuery emits a valid query for crowdstrike SID 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM \\".entities.v2.latest.default\\"
| WHERE entity.EngineMetadata.Type == \\"user\\"
    AND MV_COUNT(user.id) == 1
    AND entity.namespace IN (\\"crowdstrike\\", \\"active_directory\\")
| EVAL match_value = user.id
| WHERE match_value IS NOT NULL
    AND match_value != \\"\\"
    AND match_value RLIKE \\"S-1-5-.*\\"
| EVAL is_unresolved = CASE(entity.relationships.resolution.resolved_to IS NULL, 1, 0)
| EVAL is_new = CASE(1 == 1, 1, 0)
| EVAL unresolved_id = CASE(is_unresolved == 1, entity.id, null)
| EVAL unresolved_namespace = CASE(is_unresolved == 1, entity.namespace, null)
| STATS ids = TOP(unresolved_id, 100, \\"asc\\"),
        unresolved_ns = VALUES(unresolved_namespace),
        existing_targets = TOP(entity.relationships.resolution.resolved_to, 100, \\"asc\\"),
        unresolved_n = SUM(is_unresolved),
        total_n = COUNT(*),
        new_n = SUM(is_new)
    BY match_value
| WHERE total_n >= 2 AND new_n >= 1
| SORT match_value ASC
| LIMIT 5000"
`;

exports[`ES|QL matcher query builder buildMatchGroupsQuery emits a valid query for email 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM \\".entities.v2.latest.default\\"
| WHERE entity.EngineMetadata.Type == \\"user\\"
    AND MV_COUNT(user.email) == 1
| EVAL match_value = TO_LOWER(user.email)
| WHERE match_value IS NOT NULL
    AND match_value != \\"\\"
| EVAL is_unresolved = CASE(entity.relationships.resolution.resolved_to IS NULL, 1, 0)
| EVAL is_new = CASE(1 == 1, 1, 0)
| EVAL unresolved_id = CASE(is_unresolved == 1, entity.id, null)
| EVAL unresolved_namespace = CASE(is_unresolved == 1, entity.namespace, null)
| STATS ids = TOP(unresolved_id, 100, \\"asc\\"),
        unresolved_ns = VALUES(unresolved_namespace),
        existing_targets = TOP(entity.relationships.resolution.resolved_to, 100, \\"asc\\"),
        unresolved_n = SUM(is_unresolved),
        total_n = COUNT(*),
        new_n = SUM(is_new)
    BY match_value
| WHERE total_n >= 2 AND new_n >= 1
| SORT match_value ASC
| LIMIT 5000"
`;

exports[`ES|QL matcher query builder buildMatchGroupsQuery emits a valid query for entra GUID 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM \\".entities.v2.latest.default\\"
| WHERE entity.EngineMetadata.Type == \\"user\\"
    AND MV_COUNT(user.id) == 1
    AND entity.namespace IN (\\"m365_defender\\", \\"entra_id\\")
| EVAL match_value = user.id
| WHERE match_value IS NOT NULL
    AND match_value != \\"\\"
    AND match_value RLIKE \\"[0-9a-fA-F]{8}-([0-9a-fA-F]{4}-){3}[0-9a-fA-F]{12}\\"
| EVAL is_unresolved = CASE(entity.relationships.resolution.resolved_to IS NULL, 1, 0)
| EVAL is_new = CASE(1 == 1, 1, 0)
| EVAL unresolved_id = CASE(is_unresolved == 1, entity.id, null)
| EVAL unresolved_namespace = CASE(is_unresolved == 1, entity.namespace, null)
| STATS ids = TOP(unresolved_id, 100, \\"asc\\"),
        unresolved_ns = VALUES(unresolved_namespace),
        existing_targets = TOP(entity.relationships.resolution.resolved_to, 100, \\"asc\\"),
        unresolved_n = SUM(is_unresolved),
        total_n = COUNT(*),
        new_n = SUM(is_new)
    BY match_value
| WHERE total_n >= 2 AND new_n >= 1
| SORT match_value ASC
| LIMIT 5000"
`;

exports[`ES|QL matcher query builder buildMatchGroupsQuery emits a valid query for windows SID 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM \\".entities.v2.latest.default\\"
| WHERE entity.EngineMetadata.Type == \\"user\\"
    AND MV_COUNT(user.id) == 1
    AND entity.namespace IN (\\"system\\", \\"windows\\", \\"active_directory\\")
| EVAL match_value = user.id
| WHERE match_value IS NOT NULL
    AND match_value != \\"\\"
    AND NOT match_value RLIKE \\"(S-1-5-18|S-1-5-19|S-1-5-20|S-1-5-32-54[4-9]|S-1-5-32-55[0-4])\\"
| EVAL is_unresolved = CASE(entity.relationships.resolution.resolved_to IS NULL, 1, 0)
| EVAL is_new = CASE(1 == 1, 1, 0)
| EVAL unresolved_id = CASE(is_unresolved == 1, entity.id, null)
| EVAL unresolved_namespace = CASE(is_unresolved == 1, entity.namespace, null)
| STATS ids = TOP(unresolved_id, 100, \\"asc\\"),
        unresolved_ns = VALUES(unresolved_namespace),
        existing_targets = TOP(entity.relationships.resolution.resolved_to, 100, \\"asc\\"),
        unresolved_n = SUM(is_unresolved),
        total_n = COUNT(*),
        new_n = SUM(is_new)
    BY match_value
| WHERE total_n >= 2 AND new_n >= 1
| SORT match_value ASC
| LIMIT 5000"
`;

exports[`ES|QL matcher query builder buildMatchGroupsQuery pages with an exclusive keyset on match_value 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM \\".entities.v2.latest.default\\"
| WHERE entity.EngineMetadata.Type == \\"user\\"
    AND MV_COUNT(user.email) == 1
| EVAL match_value = TO_LOWER(user.email)
| WHERE match_value IS NOT NULL
    AND match_value != \\"\\"
| WHERE match_value > \\"alice@corp.com\\"
| EVAL is_unresolved = CASE(entity.relationships.resolution.resolved_to IS NULL, 1, 0)
| EVAL is_new = CASE(1 == 1, 1, 0)
| EVAL unresolved_id = CASE(is_unresolved == 1, entity.id, null)
| EVAL unresolved_namespace = CASE(is_unresolved == 1, entity.namespace, null)
| STATS ids = TOP(unresolved_id, 100, \\"asc\\"),
        unresolved_ns = VALUES(unresolved_namespace),
        existing_targets = TOP(entity.relationships.resolution.resolved_to, 100, \\"asc\\"),
        unresolved_n = SUM(is_unresolved),
        total_n = COUNT(*),
        new_n = SUM(is_new)
    BY match_value
| WHERE total_n >= 2 AND new_n >= 1
| SORT match_value ASC
| LIMIT 5"
`;

exports[`ES|QL matcher query builder buildWatermarkQuery emits a valid max first_seen query 1`] = `
"SET unmapped_fields=\\"nullify\\";
FROM \\".entities.v2.latest.default\\"
| WHERE entity.EngineMetadata.Type == \\"user\\"
    AND MV_COUNT(user.email) == 1
    AND entity.relationships.resolution.resolved_to IS NULL
| EVAL match_value = TO_LOWER(user.email)
| WHERE match_value IS NOT NULL
    AND match_value != \\"\\"
| STATS max_ts = MAX(entity.lifecycle.first_seen)
| LIMIT 1"
`;
